--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Nodejs simple app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "node index.js & ./node_modules/wait-on/bin/wait-on -v http://localhost:8081",
+    "start": "node index.js",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:verify": "cypress verify"
   },
   "repository": {
     "type": "git",
@@ -18,8 +21,10 @@
   },
   "homepage": "https://github.com/a-fina/jte-basic-fe#readme",
   "dependencies": {
+    "cypress": "^6.6.0",
     "http": "0.0.1-security",
     "node-static": "^0.7.11",
-    "server": "^1.0.35"
+    "server": "^1.0.35",
+    "wait-on": "^6.0.0"
   }
 }
